--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Blog</title>
+    <link rel="stylesheet" href="assets\css\form.css"/>
 </head>
 <body>
 
@@ -32,7 +33,7 @@
 </body>
 </html>
 
-<!-- html notes -->
+<!-- my html notes -->
 <!-- The attribute of <label> must be equal to the id attribute of the related <input> field -->
 <!-- The .required property sets or returns whether a text field must be filled out before submitting the form -->
 <!-- input type="text" defines a single-line text input field -->
