--- a/blog.html
+++ b/blog.html
@@ -10,8 +10,8 @@
 
     <header>
         <h1>My First Blog Posts</h1>
-        <button></button> <!-- add back button-->
-        <button></button> <!-- add light/dark button-->
+        <button>Back</button> <!-- add back button-->
+        <button>💡</button> <!-- add light/dark button-->
     </header>
 
     <main>
@@ -19,7 +19,7 @@
     </main>
 
     <footer>
-        <a href="https://alarrabee.github.io/advanced-css-portfolio/"></a>
+        <a href="https://alarrabee.github.io/advanced-css-portfolio/">Link to developer portfolio</a>
     </footer>
     
 </body>
