add submit button and back button

--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@
 
     <header>
         <h1>My First Blog Posts</h1>
-        <button>Back</button> <!-- add back button-->
+        <button id="back-button">Back</button> <!-- add back button-->
         <button>💡</button> <!-- add light/dark button-->
     </header>
 
@@ -21,6 +21,8 @@
     <footer>
         <a href="https://alarrabee.github.io/advanced-css-portfolio/">Link to developer portfolio</a>
     </footer>
+
+    <script src="assets\js\blog.js"></script>
     
 </body>
 </html>
