--- a/index.html
+++ b/index.html
@@ -24,12 +24,14 @@
                 <input id="content" type="text" name="content"/><br>
 
                 <!-- submit button: will direct user to the blog page -->
-                <input id="submit-post" type="submit" value="submit post" onclick=""/> <!-- Add link to blog.html-->
+                <input id="submit-post" type="submit" value="submit post" onclick="blog.html"/> <!-- Add link to blog.html-->
 
             </form>
         </div>
     </main>
-    
+
+    <script src="assets\js\form.js"></script>
+  
 </body>
 </html>
 
