fix bug preventing content from being displayed on blog page

--- a/blog.html
+++ b/blog.html
@@ -15,7 +15,9 @@
     </header>
 
     <main>
-        <div></div> <!--new posts will be added to this div content box-->
+
+        <div id="post-div"></div> <!--new posts will be added to this div content box-->
+        
     </main>
 
     <footer>
