add light/dark mode styles to blog page

--- a/blog.html
+++ b/blog.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Page</title>
+    <!-- <link rel="stylesheet" href="assets\css\styles.css"/> -->
     <link rel="stylesheet" href="assets\css\blog.css"/>
 </head>
-<body>
+<body class="light-mode">
 
     <header>
         <h1>My First Blog Posts</h1>
         <button id="back-button">Back</button> <!-- add back button-->
-        <button>💡</button> <!-- add light/dark button-->
+        <button type="button" id="dark-mode">💡</button> <!-- add light/dark button-->
     </header>
 
     <main>
@@ -24,7 +25,9 @@
         <a href="https://alarrabee.github.io/advanced-css-portfolio/">Link to developer portfolio</a>
     </footer>
 
+    <!-- <script src="assets\js\logic.js"></script> -->
     <script src="assets\js\blog.js"></script>
+    
     
 </body>
 </html>
